<resources>
    <string name="app_name">Firebase</string>

    <string name="action_settings">Settings</string>
    <string name="username_validation_msg">Username cannot be blank</string>
    <string name="signup_success">Welcome User !</string>
    <string name="pwd_validation_msg">Minimum 8 characters required</string>
<string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="welcome_you">Welcome You!</string>
    <string name="todo">TODO</string>

    <string name="forgot_password">Forgot Password?</string>

    <string name="not_a_member_registered_here">Not a Member? Registered Here...</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_click_here">Already Registered? Click Here...</string>


</resources>
